# pdf-editor

./: pyproject.toml
pdf_edit/: .main.py.swo  .main.py.swp  Modulo Registro Presenze T-Key Work Experience_Allegato 6_Rev.02_2022.pdf:Zone.Identifier  main.py
