[tool.poetry]
name = "pdf-edit"
version = "0.1.0"
description = ""
authors = ["Bietola <dincio.montesi@gmail.com>"]
readme = "README.md"
packages = [{include = "pdf_edit"}]

[tool.poetry.dependencies]
python = "^3.8"
pypdf2 = "^3.0.1"
reportlab = "^3.6.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
